# pybind_repro

./: CMakeLists.txt  main.cpp
